# agentic-rag-playground

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
config/: __init__.py
ingest/: __init__.py  load_docs.py
query/: agent.py  api.py  rag_query_engine.py
storage/: chroma.sqlite3  index_store.json
