[project]
name = "agentic-rag-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "llama-index>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
]
