[project]
name = "agentic-rag-playground"
version = "0.1.0"
description = "Agentic RAG playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "llama-index>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-google-genai>=0.8.3",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "llama-index-readers-github>=0.9.0",
    "llama-index-vector-stores-chroma>=0.5.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
]
